[package]
name = "ruttle"
version = "0.1.0"
edition = "2024"
description = "A fast static templating engine for HTML, CSS, and static web assets"
license = "MIT"
repository = "https://github.com/nishantHolla/ruttle"
homepage = "https://github.com/nishantHolla/ruttle"
readme = "README.md"
keywords = ["template", "static-site", "html", "rust", "web"]
categories = ["template-engine", "web-programming"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
gray_matter = { version = "0.3.2", features = ["json", "toml", "yaml"] }
pulldown-cmark = "0.13.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1"
thiserror = "2.0.18"
minify-html = "0.18.1"
